--- a/coding-assignment-5.ipynb
+++ b/coding-assignment-5.ipynb
@@ -78,15 +78,20 @@
     "    x_reg = QuantumRegister(n, 'x_reg')\n",
     "    clause_ancilla = QuantumRegister(m, 'c ancils')\n",
     "    clause_outputs = QuantumRegister(m, 'c outputs') \n",
-    "    y_reg = QuantumRegister(n, 'y_reg')\n",
+    "    y_reg = QuantumRegister(1, 'y_reg')\n",
     "    x_meas = ClassicalRegister(n, 'x_meas')\n",
-    "    circ = QuantumCircuit(x_reg, clause_ancilla,  clause_outputs, y_reg, x_meas)\n",
+    "    circ = QuantumCircuit(x_reg, y_reg, clause_ancilla,  clause_outputs, x_meas)\n",
     "\n",
     "    circ.x(clause_ancilla)\n",
-    "    \n",
+    "    circ.x(clause_outputs)\n",
+    "    circ.x(y_reg)\n",
+    "    circ.h(y_reg)\n",
+    "    circ.h(x_reg)\n",
     "    \n",
     "    return circ, x_reg, clause_ancilla, clause_outputs, y_reg, x_meas\n",
-    "\n"
+    "\n",
+    "def add_3sat_oracle(circ, clauses, x_reg, clause_ancilla, clause_outputs, y_reg):\n",
+    "    "
    ]
   },
   {
@@ -238,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
