--- a/coding-assignment-5.ipynb
+++ b/coding-assignment-5.ipynb
@@ -74,7 +74,21 @@
    "outputs": [],
    "source": [
     "def initialize_3sat_grovers_circuit(n, m):\n",
-    "    # create circuit registers\n",
+    "    \"\"\"\n",
+    "    This function initialize the quantum circuit to compute the solution to the 3-SAT problem.\n",
+    "\n",
+    "    Parameter:\n",
+    "        n: the number of variables\n",
+    "        m: the number of clauses\n",
+    "    \n",
+    "    Return:\n",
+    "        circ: the quantum circuit\n",
+    "        x_reg: the quantum registers of variables\n",
+    "        clause_ancilla: quantum registers to support the calculation\n",
+    "        clause_outputs: the output corresponding to each clause\n",
+    "        y_reg: the output of verifying 3-SAT\n",
+    "        x_meas: the classical circuit to hold the measurement of x_reg\n",
+    "    \"\"\"\n",
     "    x_reg = QuantumRegister(n, 'x_reg')\n",
     "    clause_ancilla = QuantumRegister(m, 'c ancils')\n",
     "    clause_outputs = QuantumRegister(m, 'c outputs') \n",
@@ -82,6 +96,7 @@
     "    x_meas = ClassicalRegister(n, 'x_meas')\n",
     "    circ = QuantumCircuit(x_reg, y_reg, clause_ancilla,  clause_outputs, x_meas)\n",
     "\n",
+    "    # Initialize the value for each qubit\n",
     "    circ.x(clause_ancilla)\n",
     "    circ.x(clause_outputs)\n",
     "    circ.x(y_reg)\n",
@@ -89,16 +104,6 @@
     "    circ.h(x_reg)\n",
     "    \n",
     "    return circ, x_reg, clause_ancilla, clause_outputs, y_reg, x_meas\n",
-    "\n",
-    "def quantum_and(circ, a, b, result):\n",
-    "    ''' \n",
-    "    Adds a quantum AND gate that to the QuantumCircuit circ.\n",
-    "    @return the final output is stored on the qubit result. \n",
-    "    We also pass in an extra \"ancilla\" qubit nand_result that is used to store the \n",
-    "    answer of the first NAND before passiing it along to the quantum_not() function. \n",
-    "    Also note that we assume the nand_result ancilla is set to state |1> at the outset. \n",
-    "    '''\n",
-    "    circ.ccx(a, b, result) \n",
     "\n",
     "\n",
     "def or_gate(circ, a, b, result):\n",
@@ -150,7 +155,8 @@
     "\n",
     "def add_clause_reverse(circ, vars_reg, clause, c_index, clause_ancilla, clause_outputs):\n",
     "    '''\n",
-    "    Adds an OR gate to a quantum circuit.\n",
+    "    Adds an OR gate to a quantum circuit. This time, it is in reversed order to restore\n",
+    "    original value of each qubit.\n",
     "    \n",
     "    Args:\n",
     "        QuantumRegisters a, b, and result (result is in state |1>)\n",
@@ -177,10 +183,15 @@
     "\n",
     "\n",
     "def add_3sat_oracle(circ, clauses, x_reg, clause_ancilla, clause_outputs, y_reg):\n",
+    "    \"\"\"\n",
+    "    This function add the oracle to solve the three sat problem. It also convert the \n",
+    "    value of all qubits back to original value\n",
+    "    \"\"\"\n",
     "    for c in range(len(clauses)):\n",
     "        clause = clauses[c]\n",
     "        add_clause(circ, x_reg, clause, c, clause_ancilla, clause_outputs)\n",
     "\n",
+    "    # Multi-control gate to evaluate the 3-SAT solution\n",
     "    circ.mct(clause_outputs, y_reg)\n",
     "\n",
     "    for c in range(len(clauses)-1, -1, -1):\n",
@@ -210,8 +221,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# YOUR FUNCTIONS GO HERE (DELETE THIS COMMENT)\n",
     "def add_diffuser(circ, vars_reg, n):\n",
+    "    \"\"\"\n",
+    "    Function to add the diffuser operation. It adds an H gate to all variables,\n",
+    "    then a gate to flip all state except the zeros state. Finally, it adds an H gate\n",
+    "    to all variables.\n",
+    "    \"\"\"\n",
     "    circ.h(vars_reg)\n",
     "\n",
     "    matrix = np.identity(2**n)\n",
@@ -222,6 +237,11 @@
     "    circ.h(vars_reg)\n",
     "\n",
     "def three_sat_grovers(clauses, n, trials):\n",
+    "    \"\"\"\n",
+    "    Function to add the diffuser operation. It adds an H gate to all variables,\n",
+    "    then a gate to flip all state except the zeros state. Finally, it adds an H gate\n",
+    "    to all variables.\n",
+    "    \"\"\"\n",
     "    N = int(math.sqrt(2**n))\n",
     "    circ, x_reg, clause_ancilla, clause_outputs, y_reg, x_meas = initialize_3sat_grovers_circuit(n, len(clauses))\n",
     "    for j in range(N):\n",
