--- a/coding-assignment-5-part-2-ver2.ipynb
+++ b/coding-assignment-5-part-2-ver2.ipynb
@@ -175,8 +175,9 @@
     "        circ.unitary(three_color_matrix, [vars_reg[i], vars_reg[i+1]])\n",
     "\n",
     "\n",
-    "def three_coloring_grovers(edges, n, trials):\n",
-    "    N = int(math.sqrt(2**(2*n)))\n",
+    "def three_coloring_grovers(edges, n, trials, N=0):\n",
+    "    if not N:\n",
+    "        N = int(math.sqrt(2**(2*n)))\n",
     "    circ, x_reg, edges_ancilla, edges_outputs, y_reg, x_meas = initialize_3coloring_grovers_circuit(n, len(edges))\n",
     "    for j in range(N):\n",
     "        add_3color_oracle(circ, edges, x_reg, edges_ancilla, edges_outputs, y_reg)\n",
@@ -209,7 +210,7 @@
     "edges = [(1,2), (2,3)]\n",
     "n = 3\n",
     "trials = 1500\n",
-    "counts = three_coloring_grovers(edges, n, trials)\n",
+    "counts = three_coloring_grovers(edges, n, trials, N=2)\n",
     "plot_histogram(counts)"
    ]
   },
@@ -280,7 +281,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
