--- a/final_project_quantum_key_distribution.ipynb
+++ b/final_project_quantum_key_distribution.ipynb
@@ -22,7 +22,7 @@
     "When we communicate, it is essential to encrypt the messages. One of the classical way to do this is to use a key to encrypt the message by converting each character to numbers (for example, ASCII number) and add the number representation of each character in the key to generate encrypted character. For example, given the following ASCII table\n",
     "![image.png](attachment:image.png)\n",
     "The message \"Hello\" can be converted to \"48 65 6C 6C 6F\" in hexadecimal.\n",
-    "For simplicity, assuming the out message only contains lowercase characters and characters a, b, ..., z corresponds to number 0, 1, ..., 25. In our case, \"hello\" will be encrypted into \"7 4 11 11 14\". Let's say that the shared key is \"t\", which is \"19\" in our representation. Then, for each character representation c in the message with a key representation k, the encrypted representation c' can be calculated by performing the following calculation $c' = (c + k) mod 26$ and then, c' can be converted back to a real character given the representation. In our previous example, the encryped message is:\n",
+    "For simplicity, assuming the out message only contains lowercase characters and characters a, b, ..., z corresponds to number 0, 1, ..., 25. In our case, \"hello\" will be encrypted into \"7 4 11 11 14\". Let's say that the shared key is \"t\", which is \"19\" in our representation. Then, for each character representation c in the message with a key representation k, the encrypted representation c' can be calculated by performing the following calculation $c' = (c + k) \\text{ mod } 26$ and then, c' can be converted back to a real character given the representation. In our previous example, the encryped message is:\n",
     "|  |  |  |  |  |  |\n",
     "| ----------- | ----------- | ----------- | ----------- | ----------- | ----------- |\n",
     "| Message | h | e | l | l | o |\n",
@@ -49,8 +49,25 @@
     "## RSA encryption\n",
     "As mentioned, symmetric encryption can be dangerous as if the shared key is leaked, the whole message can be exposed. One solution to this is to eliminate the usage of shared key, i.e. using **Asymmetric encryption**. The reason it is called \"asymmetric\" is that there are two keys, namely public and private key. Both of the key can be used to encrypt a message, and as one is used to encrypt the message, the other one can be used to decrypt it.\n",
     "\n",
-    "A very famous example of asymmetric encryption is the RSA encryption, which is heavily based on modular arithmetic and number theory.\n",
-    "\n"
+    "A very famous example of asymmetric encryption is the RSA encryption, which is heavily based on modular arithmetic and number theory, especially in factorization and prime number. \n",
+    "\n",
+    "To illustrate the idea of RSA encryption, we will choose the private message to be $m = 4$. Then, we will be picking two prime number and let them be $p = 907$ and $q = 773$. Then, a number $n = p \\cdot q = 701111$.\n",
+    "\n",
+    "Then we will use the Carmicheal's totient function $\\lambda(n) = lcm(p-1, q-1) = 349716$.\n",
+    "Given this, the public key $e$ will be chosen as a prime number between $2$ and $349716$, while the private key $d$ is the modular inverse of $e \\text{ mod } \\lambda(n)$. For example, if we pick $e = 11$, then $d = 254339$. Given the two key, the private message can be encrypted as $c = m^e \\text{ mod } n = 688749$, and the decrypted message is $m = c^d \\text{ mod } n = 4$.\n",
+    "\n",
+    "The above example is just a simple illustration of RSA. In reality, two people have to share their public key and keep their private key in secret to remain secured connection. One property of RSA encryption is that even if we know the public key, it is still cannot be decrypted. \n",
+    "\n",
+    "Cracking RSA is possible, but it would take a very long time to do it. However, with the existence of quantum computing and Shor's algorithm, cracking RSA is completely possible in a much shorter time. Thus, in the near future, RSA might not be safe anymore."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantum key distribution\n",
+    "The main idea of this method is that measuring a qubit can change its state. Thus, if Alice send Bob a qubit, and Eve tries to measure it before Bob does, there is a chance that Eve will change the state of the qubit and Bob will not receive the correct qubit that Alice send."
    ]
   }
  ],
